--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -98,7 +98,6 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgspotlight)
     ADD_SUBDIRECTORY(osgstereoimage)
     ADD_SUBDIRECTORY(osgstereomatch)
-    ADD_SUBDIRECTORY(osgteapot)
     ADD_SUBDIRECTORY(osgterrain)
     ADD_SUBDIRECTORY(osgtext)
     ADD_SUBDIRECTORY(osgtext3D)
@@ -138,9 +137,10 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgwidgettable)
     ADD_SUBDIRECTORY(osgwidgetwindow)
 
-IF(NOT OSG_GLES2_AVAILABLE AND NOT OSG_GLES2_AVAILABLE)
+IF(NOT OSG_GLES2_AVAILABLE AND NOT OSG_GLES2_AVAILABLE AND NOT OSG_GL3_AVAILABLE)
     ADD_SUBDIRECTORY(osgscreencapture)
     ADD_SUBDIRECTORY(osgmotionblur)
+    ADD_SUBDIRECTORY(osgteapot)
 ENDIF()
 
 IF(OSG_GLU_AVAILABLE)
