--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -58,7 +58,6 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osglogicop)
     ADD_SUBDIRECTORY(osglogo)
     ADD_SUBDIRECTORY(osgmanipulator)
-    ADD_SUBDIRECTORY(osgmemorytest)
     ADD_SUBDIRECTORY(osgmovie)
     ADD_SUBDIRECTORY(osgmultiplerendertargets)
     ADD_SUBDIRECTORY(osgmultitexture)
@@ -107,7 +106,6 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgtexturerectangle)
     ADD_SUBDIRECTORY(osgtexturecompression)
     ADD_SUBDIRECTORY(osgthirdpersonview)
-    ADD_SUBDIRECTORY(osgunittests)
     ADD_SUBDIRECTORY(osgvertexprogram)
     ADD_SUBDIRECTORY(osgvertexattributes)
     ADD_SUBDIRECTORY(osgvolume)
@@ -137,16 +135,21 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgwidgettable)
     ADD_SUBDIRECTORY(osgwidgetwindow)
 
-IF(NOT OSG_GLES1_AVAILABLE AND NOT OSG_GLES2_AVAILABLE AND NOT OSG_GL3_AVAILABLE)
-    ADD_SUBDIRECTORY(osgscreencapture)
-    ADD_SUBDIRECTORY(osgmotionblur)
-    ADD_SUBDIRECTORY(osgteapot)
-ENDIF()
+    IF(OSG_CPP_EXCEPTIONS_AVAILABLE)
+        ADD_SUBDIRECTORY(osgunittests)
+        ADD_SUBDIRECTORY(osgmemorytest)
+    ENDIF()
 
-IF(OSG_GLU_AVAILABLE)
-    ADD_SUBDIRECTORY(osgphotoalbum)
-    ADD_SUBDIRECTORY(osgtessellate)
-ENDIF()
+    IF(NOT OSG_GLES1_AVAILABLE AND NOT OSG_GLES2_AVAILABLE AND NOT OSG_GL3_AVAILABLE)
+        ADD_SUBDIRECTORY(osgscreencapture)
+        ADD_SUBDIRECTORY(osgmotionblur)
+        ADD_SUBDIRECTORY(osgteapot)
+    ENDIF()
+
+    IF(OSG_GLU_AVAILABLE)
+        ADD_SUBDIRECTORY(osgphotoalbum)
+        ADD_SUBDIRECTORY(osgtessellate)
+    ENDIF()
 
     ADD_SUBDIRECTORY(osgpdf)
     
