--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -530,9 +530,9 @@ ENDIF(MSVC AND NOT MSVC_IDE)
 #SET(OUTPUT_LIBDIR ${PROJECT_BINARY_DIR}/lib/${CMAKE_SYSTEM_NAME})
 SET(OUTPUT_LIBDIR ${PROJECT_BINARY_DIR}/lib)
 MAKE_DIRECTORY(${OUTPUT_LIBDIR})
-IF(NOT MSVC)
+IF(NOT MSVC OR MSVC_IDE)
     MAKE_DIRECTORY(${OUTPUT_LIBDIR}/${OSG_PLUGINS})
-ENDIF(NOT MSVC)
+ENDIF(NOT MSVC OR MSVC_IDE)
 
 # On CMake 2.4.x use EXECUTABLE_OUTPUT_PATH and LIBRARY_OUTPUT_PATH and later
 # we work around the DLL placement by use of the PREFIX target property hack
