--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -350,6 +350,7 @@ FIND_PACKAGE(Inventor)
 FIND_PACKAGE(Jasper)
 FIND_PACKAGE(OpenEXR)
 FIND_PACKAGE(COLLADA)
+FIND_PACKAGE(FBX)
 FIND_PACKAGE(ZLIB)
 FIND_PACKAGE(Xine)
 FIND_PACKAGE(OpenVRML)
