--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -157,6 +157,10 @@ IF(COLLADA_FOUND)
     ADD_SUBDIRECTORY(dae)
 ENDIF()
 
+IF(FBX_FOUND)
+    ADD_SUBDIRECTORY(fbx)
+ENDIF()
+
 IF(OSG_GLU_AVAILABLE)
     ADD_SUBDIRECTORY(lwo)
     ADD_SUBDIRECTORY(dw)
