--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -208,6 +208,10 @@ IF(FFMPEG_FOUND)
     ADD_SUBDIRECTORY(ffmpeg)
 ENDIF()
 
+IF(DIRECTSHOW_FOUND)
+    ADD_SUBDIRECTORY(directshow)
+ENDIF()
+
 # IF(OPENAL_FOUND)
 #    ADD_SUBDIRECTORY(OpenAL)
 # ENDIF()
