--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,7 @@ IF(BUILD_OSG_WRAPPERS)
     ADD_SUBDIRECTORY(osgWrappers)
 ENDIF()
 
-IF(MSVC80)
+IF(MSVC80 OR MSVC90)
   OPTION(OSG_MSVC_GENERATE_PLUGINS_AND_WRAPPERS_MANIFESTS "Generate or not manifests files under VS8 for dynamically loaded dlls" ON)
 ENDIF()
 
