--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -188,7 +188,7 @@ IF(DYNAMIC_OPENSCENEGRAPH)
         ENDIF()
     ENDIF()
 
-    IF (QT4_FOUND)
+    IF (QT4_FOUND AND QT_QTWEBKIT_FOUND)
         ADD_SUBDIRECTORY(osgQtBrowser)
     ENDIF()
 
