--- a/examples/osgQtBrowser/CMakeLists.txt
+++ b/examples/osgQtBrowser/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(TARGET_SRC
 )
 
 SET(TARGET_EXTERNAL_LIBRARIES ${QT_QTCORE_LIBRARY_RELEASE} ${QT_QTGUI_LIBRARY_RELEASE} ${QT_QTOPENGL_LIBRARY_RELEASE} ${QT_QTWEBKIT_LIBRARY_RELEASE})
-INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR})
 
 SET(TARGET_ADDED_LIBRARIES osgWidget )
 
