Backport FBX plugin to 2.8 branch. Modified FBX to use the old osgDB::ReaderWriter::Options namespace. This commit includes a merge of r11111 (osgDB UTF mods).

--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -160,6 +160,10 @@ IF(COLLADA_FOUND)
     ADD_SUBDIRECTORY(dae)
 ENDIF(COLLADA_FOUND)
 
+IF(FBX_FOUND)
+    ADD_SUBDIRECTORY(fbx)
+ENDIF()
+
 ADD_SUBDIRECTORY(lwo)
 ADD_SUBDIRECTORY(bvh)
 ADD_SUBDIRECTORY(x)
