--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,6 +295,7 @@ FIND_PACKAGE(Inventor)
 FIND_PACKAGE(Jasper)
 FIND_PACKAGE(OpenEXR)
 FIND_PACKAGE(COLLADA)
+FIND_PACKAGE(FBX)
 FIND_PACKAGE(ZLIB)
 FIND_PACKAGE(Xine)
 FIND_PACKAGE(OpenVRML)
