--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -200,6 +200,10 @@ IF(XINE_FOUND)
     ADD_SUBDIRECTORY(xine)
 ENDIF(XINE_FOUND)
 
+IF(APPLE)
+    ADD_SUBDIRECTORY(imageio)
+ENDIF(APPLE)
+
 IF(QUICKTIME_FOUND)
     ADD_SUBDIRECTORY(quicktime)
 ENDIF(QUICKTIME_FOUND)
