--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -305,7 +305,9 @@ FIND_PACKAGE(CURL)
 FIND_PACKAGE(ITK)
 FIND_PACKAGE(LibVNCServer)
 FIND_PACKAGE(OurDCMTK)
+FIND_PACKAGE(OpenAL)
 FIND_PACKAGE(XUL)
+FIND_PACKAGE(FFmpeg)
 
 #use pkg-config to find various modues
 INCLUDE(FindPkgConfig OPTIONAL)
