--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -205,6 +205,14 @@ IF(APPLE)
     ADD_SUBDIRECTORY(imageio)
 ENDIF(APPLE)
 
+IF(FFMPEG_FOUND)
+    ADD_SUBDIRECTORY(ffmpeg)
+ENDIF(FFMPEG_FOUND)
+
+IF(OPENAL_FOUND)
+    ADD_SUBDIRECTORY(OpenAL)
+ENDIF(OPENAL_FOUND)
+
 IF(QUICKTIME_FOUND)
     ADD_SUBDIRECTORY(quicktime)
 ENDIF(QUICKTIME_FOUND)
