--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -209,9 +209,9 @@ IF(FFMPEG_FOUND)
     ADD_SUBDIRECTORY(ffmpeg)
 ENDIF(FFMPEG_FOUND)
 
-IF(OPENAL_FOUND)
-    ADD_SUBDIRECTORY(OpenAL)
-ENDIF(OPENAL_FOUND)
+# IF(OPENAL_FOUND)
+#    ADD_SUBDIRECTORY(OpenAL)
+# ENDIF(OPENAL_FOUND)
 
 IF(QUICKTIME_FOUND)
     ADD_SUBDIRECTORY(quicktime)
