--- a/src/osgPlugins/ffmpeg/CMakeLists.txt
+++ b/src/osgPlugins/ffmpeg/CMakeLists.txt
@@ -1,33 +1,15 @@
-# INCLUDE_DIRECTORIES( ${FFMPEG_INCLUDE_DIRS} )
+INCLUDE_DIRECTORIES( ${FFMPEG_INCLUDE_DIRS} )
+LINK_DIRECTORIES(${FFMPEG_LIBRARY_DIRS})
+SET(TARGET_EXTERNAL_LIBRARIES ${FFMPEG_LIBRARIES} )
 
-IF (FFMPEG_LIBSWSCALE_FOUND)
 
-    INCLUDE_DIRECTORIES( 
-        ${FFMPEG_LIBAVFORMAT_INCLUDE_DIRS} ${FFMPEG_LIBAVFORMAT_INCLUDE_DIRS}/libavformat ${FFMPEG_LIBAVFORMAT_INCLUDE_DIRS}/ffmpeg
-        ${FFMPEG_LIBAVDEVICE_INCLUDE_DIRS} ${FFMPEG_LIBAVDEVICE_INCLUDE_DIRS}/libavdevice ${FFMPEG_LIBAVDEVICE_INCLUDE_DIRS}/ffmpeg
-        ${FFMPEG_LIBAVCODEC_INCLUDE_DIRS} ${FFMPEG_LIBAVCODEC_INCLUDE_DIRS}/libavcodec ${FFMPEG_LIBAVCODEC_INCLUDE_DIRS}/ffmpeg
-        ${FFMPEG_LIBAVUTIL_INCLUDE_DIRS} ${FFMPEG_LIBAVUTIL_INCLUDE_DIRS}/libavcodec ${FFMPEG_LIBAVUTIL_INCLUDE_DIRS}/ffmpeg
-        ${FFMPEG_LIBSWSCALE_INCLUDE_DIRS} ${FFMPEG_LIBSWSCALE_INCLUDE_DIRS}/libswscale ${FFMPEG_LIBSWSCALE_INCLUDE_DIRS}/ffmpeg
-    )
+IF(FFMPEG_LIBSWSCALE_FOUND)
+
+    INCLUDE_DIRECTORIES( ${FFMPEG_LIBSWSCALE_INCLUDE_DIRS} ${FFMPEG_LIBSWSCALE_INCLUDE_DIRS}/libswscale )
 
     ADD_DEFINITIONS(-DUSE_SWSCALE)
 
-    LINK_DIRECTORIES(${FFMPEG_LIBRARY_DIRS})
-
     SET(TARGET_EXTERNAL_LIBRARIES ${FFMPEG_LIBRARIES} ${FFMPEG_LIBSWSCALE_LIBRARIES})
-
-ELSE(FFMPEG_LIBSWSCALE_FOUND)
-
-    INCLUDE_DIRECTORIES( 
-        ${FFMPEG_LIBAVFORMAT_INCLUDE_DIRS} ${FFMPEG_LIBAVFORMAT_INCLUDE_DIRS}/libavformat ${FFMPEG_LIBAVFORMAT_INCLUDE_DIRS}/ffmpeg
-        ${FFMPEG_LIBAVDEVICE_INCLUDE_DIRS} ${FFMPEG_LIBAVDEVICE_INCLUDE_DIRS}/libavdevice ${FFMPEG_LIBAVDEVICE_INCLUDE_DIRS}/ffmpeg
-        ${FFMPEG_LIBAVCODEC_INCLUDE_DIRS} ${FFMPEG_LIBAVCODEC_INCLUDE_DIRS}/libavcodec ${FFMPEG_LIBAVCODEC_INCLUDE_DIRS}/ffmpeg
-        ${FFMPEG_LIBAVUTIL_INCLUDE_DIRS} ${FFMPEG_LIBAVUTIL_INCLUDE_DIRS}/libavcodec ${FFMPEG_LIBAVUTIL_INCLUDE_DIRS}/ffmpeg
-    )
-
-    LINK_DIRECTORIES(${FFMPEG_LIBRARY_DIRS})
-
-    SET(TARGET_EXTERNAL_LIBRARIES ${FFMPEG_LIBRARIES} )
 
 ENDIF()
 
@@ -60,6 +42,10 @@ SET(TARGET_H
     MessageQueue.hpp
 )
 
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    # Remove -pedantic flag as it barfs on ffmoeg headers
+   STRING(REGEX REPLACE "-pedantic" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+ENDIF()
 
 
 #### end var setup  ###
