--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -57,7 +57,6 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osglogicop)
     ADD_SUBDIRECTORY(osglogo)
     ADD_SUBDIRECTORY(osgmanipulator)
-    ADD_SUBDIRECTORY(osgmemorytest)
     ADD_SUBDIRECTORY(osgmotionblur)
     ADD_SUBDIRECTORY(osgmovie)
     ADD_SUBDIRECTORY(osgmultiplerendertargets)
@@ -108,7 +107,6 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgtexture3D)
     ADD_SUBDIRECTORY(osgtexturerectangle)
     ADD_SUBDIRECTORY(osgthirdpersonview)
-    ADD_SUBDIRECTORY(osgunittests)
     ADD_SUBDIRECTORY(osgvertexprogram)
     ADD_SUBDIRECTORY(osgvolume)
     ADD_SUBDIRECTORY(osgwindows)
@@ -135,6 +133,11 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgwidgetstyled)
     ADD_SUBDIRECTORY(osgwidgettable)
     ADD_SUBDIRECTORY(osgwidgetwindow)
+
+    IF(OSG_CPP_EXCEPTIONS_AVAILABLE)
+        ADD_SUBDIRECTORY(osgunittests)
+        ADD_SUBDIRECTORY(osgmemorytest)
+    ENDIF()
 
     ADD_SUBDIRECTORY(osgpdf)
     
