--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,12 @@ IF(UNIX)
     FIND_PACKAGE(X11)
     # Some Unicies need explicit linkage to the Math library or the build fails.
     FIND_LIBRARY(MATH_LIBRARY m)
+
+    FIND_LIBRARY(DL_LIBRARY dl)
+    IF(NOT DL_LIBRARY)
+        SET(DL_LIBRARY "") # change from NOTFOUND to empty when passed to linker
+    ENDIF()
+
 ENDIF(UNIX)
 
 # Make the headers visible to everything
