fixed OpenThreads/Atomic xcode 3.2.1 compatibility issue

--- a/IPhone_Project/config/OpenThreads/Config
+++ b/IPhone_Project/config/OpenThreads/Config
@@ -3,8 +3,8 @@
 #define OT_LIBRARY_STATIC 
 #include <AvailabilityMacros.h>
 
-#define _OPENTHREADS_ATOMIC_USE_GCC_BUILTINS
-
+//#define _OPENTHREADS_ATOMIC_USE_GCC_BUILTINS
+#define _OPENTHREADS_ATOMIC_USE_MUTEX
 //static link required on IPhone
 #define OT_LIBRARY_STATIC
 
