Wrap the APPLE flags in APPLE AND NOT ANDROID so that building for Android still works under Apple.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -815,7 +815,7 @@ IF   (BUILD_OSG_EXAMPLES)
 ENDIF()
 
 
-IF(APPLE)
+IF(APPLE AND NOT ANDROID)
 
         #Here we check if the user specified IPhone SDK
     IF(OSG_BUILD_PLATFORM_IPHONE OR OSG_BUILD_PLATFORM_IPHONE_SIMULATOR)
@@ -881,7 +881,7 @@ IF(APPLE)
 
     ENDIF()
 
-ENDIF(APPLE)
+ENDIF(APPLE AND NOT ANDROID)
 
 
 # For Doxygen
