Fixed errornous "Application windows are expected to have a root view controller at the end of application launch" message, added preliminary supprt for transparent views, set windowData->setCreateTransparentView(true);

--- a/IPhone_Project/iphoneExamples/iphoneViewer/osgIPhoneViewer-Info.plist
+++ b/IPhone_Project/iphoneExamples/iphoneViewer/osgIPhoneViewer-Info.plist
@@ -24,5 +24,7 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIInterfaceOrientation</key>
+	<string>UIInterfaceOrientationLandscapeLeft</string>
 </dict>
 </plist>
