DebugTouchPointsEventHandler updates a hud-camera so the debug-graphics is correct, even when rotating the device

--- a/IPhone_Project/iphoneExamples/simple/osgIPhoneExample-Info.plist
+++ b/IPhone_Project/iphoneExamples/simple/osgIPhoneExample-Info.plist
@@ -24,5 +24,12 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIInterfaceOrientation</key>
+	<string>UIInterfaceOrientationLandscapeRight</string>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 </dict>
 </plist>
